--- a/index.html
+++ b/index.html
@@ -101,6 +101,20 @@
             <p>UI Designer</p>
           </li>
         </ul>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images/resim1.jpg" alt="app picture" width="360" height="300"/>
+          <h3>Banking App</h3>
+            <p>App</p>
+            </li>
+            <li>
+              <img src="./images/resim2.jpg" alt="payment photo" width="360" height="300"/>
+              <h3>Cassless Payment</h3>
+              <p>Marketing</p>
+            </li>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
