--- a/index.html
+++ b/index.html
@@ -104,15 +104,64 @@
         <h2>Our Portfolio</h2>
         <ul>
           <li>
-            <img src="./images/resim1.jpg" alt="app picture" width="360" height="300"/>
-          <h3>Banking App</h3>
+            <img
+              src="./images/resim1.jpg"
+              alt="app picture"
+              width="360"
+              height="300"
+            />
+            <h3>Banking App</h3>
             <p>App</p>
-            </li>
-            <li>
-              <img src="./images/resim2.jpg" alt="payment photo" width="360" height="300"/>
-              <h3>Cassless Payment</h3>
-              <p>Marketing</p>
-            </li>
+          </li>
+          <li>
+            <img
+              src="./images/resim2.jpg"
+              alt="payment photo"
+              width="360"
+              height="300"
+            />
+            <h3>Cassless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/resim3.jpg"
+              alt="pc and phone photo"
+              width="360"
+              height="300"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/resim4.jpg"
+              alt="car photo"
+              width="360"
+              height="300"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/resim5.jpg"
+              alt="phone screen photo"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustration</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/resim6.jpg"
+              alt="women picture"
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
