--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a>"WEBSTUDIOS"</a>
+      <a href="./index.html">WEBSTUDIOS</a>
       <nav>
         <ul>
           <li><a href="#">Studio</a></li>
@@ -167,7 +167,7 @@
       </section>
     </main>
     <footer>
-      <a href="WEBSTUDIOS"></a>
+      <a href="./index.html">WEBSTUDIOS</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
