--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <a href="./index.html">WEBSTUDIOS</a>
       <nav>
-        <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+        <ul class="site-nav">
+          <li><a class="link" href="#">Studio</a></li>
+          <li><a class="link" href="#">Portfolio</a></li>
+          <li><a class="link" href="#">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contact">
         <a href="tel:+11000111111">+11 (000)111-11-11</a>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       </address>
