--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -23,8 +27,8 @@
     </header>
     <main>
       <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order service</button>
+        <h1 class="title">Effective Solutions for Your Business</h1>
+        <button class="button" type="button">Order service</button>
       </section>
       <section>
         <ul>
