--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -26,45 +27,45 @@
       </address>
     </header>
     <main>
-      <section>
+      <section class="post1">
         <h1 class="title">Effective Solutions for Your Business</h1>
         <button class="button" type="button">Order service</button>
       </section>
       <section>
-        <ul>
+        <ul class="section1">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="section1-title">Strategy</h3>
+            <p class="section1-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="section1-title">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
-            </p>
+            </p class="section1-text">
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="section1-title">Diligence</h3>
+            <p class="section1-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="header3">Technologies</h3>
+            <p class="section1-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>OUR TEAM</h2>
-        <ul>
+      <section class="post2">
+        <h2 class="header2">OUR TEAM</h2>
+        <ul class="section2">
           <li>
             <img
               src="./images/img-3.jpg"
@@ -72,8 +73,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="section2-title">Mark Guerrero</h3>
+            <p class="section2-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -82,8 +83,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="section2-title">Tom Ford</h3>
+            <p class="section2-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -92,8 +93,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="section2-title">Camila Garcia</h3>
+            <p class="section2-text">Marketing</p>
           </li>
           <li>
             <img
@@ -102,8 +103,8 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="section2-title">Daniel Wilson</h3>
+            <p class="section2-text">UI Designer</p>
           </li>
         </ul>
         <h2>Our Portfolio</h2>
