--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
             <p class="section2-text">UI Designer</p>
           </li>
         </ul>
-        <h2>Our Portfolio</h2>
-        <ul>
+        <section class="post3">
+        <h2 class="header2">Our Portfolio</h2>
+        <ul class="section3">
           <li>
             <img
               src="./images/resim1.jpg"
@@ -116,8 +117,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="section3-title">Banking App</h3>
+            <p class="section3-text">App</p>
           </li>
           <li>
             <img
@@ -126,8 +127,8 @@
               width="360"
               height="300"
             />
-            <h3>Cassless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="section3-title">Cassless Payment</h3>
+            <pp class="section3-text">Marketing</pp>
           </li>
           <li>
             <img
@@ -136,8 +137,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="section3-title">Meditation App</h3>
+            <p class="section3-text">App</p>
           </li>
           <li>
             <img
@@ -146,8 +147,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="section3-title">Taxi Service</h3>
+            <p class="section3-text">Marketing</p>
           </li>
           <li>
             <img
@@ -156,8 +157,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustration</h3>
-            <p>Design</p>
+            <h3 class="section3-title">Screen Illustration</h3>
+            <p class="section3-text">Design</p>
           </li>
           <li>
             <img
@@ -166,13 +167,13 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="section3-title">Online Courses</h3>
+            <p class="section3-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a href="./index.html">WEBSTUDIOS</a>
       <p>
         Increase the flow of customers and sales for your business with digital
