--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </li>
           <li>
             <h3 class="section1-title">Punctuality</h3>
-            <p>
+            <p class="section1-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p class="section1-text">
@@ -55,7 +55,7 @@
             </p>
           </li>
           <li>
-            <h3 class="header3">Technologies</h3>
+            <h3 class="section1-title">Technologies</h3>
             <p class="section1-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
