--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -45,7 +45,7 @@
             <p class="section1-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
-            </p class="section1-text">
+            </p>
           </li>
           <li>
             <h3 class="section1-title">Diligence</h3>
@@ -63,7 +63,7 @@
           </li>
         </ul>
       </section>
-      <section class="post2">
+      <section>
         <h2 class="header2">OUR TEAM</h2>
         <ul class="section2">
           <li>
@@ -107,7 +107,8 @@
             <p class="section2-text">UI Designer</p>
           </li>
         </ul>
-        <section class="post3">
+      </section>
+      <section class="post3">
         <h2 class="header2">Our Portfolio</h2>
         <ul class="section3">
           <li>
@@ -127,8 +128,8 @@
               width="360"
               height="300"
             />
-            <h3 class="section3-title">Cassless Payment</h3>
-            <pp class="section3-text">Marketing</pp>
+            <h3 class="section3-title">Cashless Payment</h3>
+            <p class="section3-text">Marketing</p>
           </li>
           <li>
             <img
