--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WEBSTUDIOS</a>
+      <a href="./index.html"><span class="accent">WEB</span>STUDIOS</a>
       <nav>
         <ul class="site-nav">
           <li><a class="link" href="#">Studio</a></li>
