--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   </head>
   <body>
     <header>
-      <a href="./index.html"><span class="accent">WEB</span>STUDIOS</a>
+      <a class="logo" href="./index.html"
+        ><span class="accent">WEB</span>STUDIOS</a
+      >
       <nav>
         <ul class="site-nav">
           <li><a class="link" href="#">Studio</a></li>
@@ -184,7 +186,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html">WEBSTUDIOS</a>
+      <a class="logo" href="./index.html"
+        ><span class="accent">WEB</span>STUDIOS</a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
