--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
   </head>
   <body>
     <header>
-      <a class="logo" href="./index.html"
-        ><span class="accent">WEB</span>STUDIOS</a
-      >
+      <a href="./index.html"><span class="accent">WEB</span>STUDIOS</a>
       <nav>
         <ul class="site-nav">
           <li><a class="link" href="#">Studio</a></li>
@@ -186,9 +184,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html"
-        ><span class="accent">WEB</span>STUDIOS</a
-      >
+      <a href="./index.html"><span class="accent">WEB</span>STUDIOS</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
