--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li><a class="link" href="#">Contacts</a></li>
         </ul>
       </nav>
-      <address class="contact">
+      <address class="adress">
         <a href="tel:+11000111111">+11 (000)111-11-11</a>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       </address>
@@ -43,29 +43,29 @@
       <section>
         <ul class="section1">
           <li>
-            <h3 class="section1-title">Strategy</h3>
-            <p class="section1-text">
+            <h3 class="h2">Strategy</h3>
+            <p class="text1">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="section1-title">Punctuality</h3>
-            <p class="section1-text">
+            <h3 class="h3">Punctuality</h3>
+            <p class="text1">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="section1-title">Diligence</h3>
-            <p class="section1-text">
+            <h3 class="h3">Diligence</h3>
+            <p class="text1">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="section1-title">Technologies</h3>
-            <p class="section1-text">
+            <h3 class="h3">Technologies</h3>
+            <p class="text1">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -73,7 +73,7 @@
         </ul>
       </section>
       <section class="post2">
-        <h2 class="header2">OUR TEAM</h2>
+        <h2 class="h2">OUR TEAM</h2>
         <ul class="section2">
           <li>
             <img
@@ -83,7 +83,7 @@
               height="260"
             />
             <h3 class="section2-title">Mark Guerrero</h3>
-            <p class="section2-text">Product Designer</p>
+            <p class="text2">Product Designer</p>
           </li>
           <li>
             <img
@@ -92,8 +92,8 @@
               width="264"
               height="260"
             />
-            <h3 class="section2-title">Tom Ford</h3>
-            <p class="section2-text">Frontend Developer</p>
+            <h3 class="h3">Tom Ford</h3>
+            <p class="text2">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -102,8 +102,8 @@
               width="264"
               height="260"
             />
-            <h3 class="section2-title">Camila Garcia</h3>
-            <p class="section2-text">Marketing</p>
+            <h3 class="h3">Camila Garcia</h3>
+            <p class="text2">Marketing</p>
           </li>
           <li>
             <img
@@ -112,13 +112,13 @@
               width="264"
               height="260"
             />
-            <h3 class="section2-title">Daniel Wilson</h3>
-            <p class="section2-text">UI Designer</p>
+            <h3 class="h3">Daniel Wilson</h3>
+            <p class="text2">UI Designer</p>
           </li>
         </ul>
       </section>
       <section class="post3">
-        <h2 class="header2">Our Portfolio</h2>
+        <h2 class="h2">Our Portfolio</h2>
         <ul class="section3">
           <li>
             <img
@@ -128,7 +128,7 @@
               height="300"
             />
             <h3 class="section3-title">Banking App</h3>
-            <p class="section3-text">App</p>
+            <p class="text3">App</p>
           </li>
           <li>
             <img
@@ -137,8 +137,8 @@
               width="360"
               height="300"
             />
-            <h3 class="section3-title">Cashless Payment</h3>
-            <p class="section3-text">Marketing</p>
+            <h3 class="h3">Cashless Payment</h3>
+            <p class="text3">Marketing</p>
           </li>
           <li>
             <img
@@ -147,8 +147,8 @@
               width="360"
               height="300"
             />
-            <h3 class="section3-title">Meditation App</h3>
-            <p class="section3-text">App</p>
+            <h3 class="h3">Meditation App</h3>
+            <p class="text3">App</p>
           </li>
           <li>
             <img
@@ -157,8 +157,8 @@
               width="360"
               height="300"
             />
-            <h3 class="section3-title">Taxi Service</h3>
-            <p class="section3-text">Marketing</p>
+            <h3 class="h3">Taxi Service</h3>
+            <p class="text3">Marketing</p>
           </li>
           <li>
             <img
@@ -167,8 +167,8 @@
               width="360"
               height="300"
             />
-            <h3 class="section3-title">Screen Illustration</h3>
-            <p class="section3-text">Design</p>
+            <h3 class="h3">Screen Illustration</h3>
+            <p class="text3">Design</p>
           </li>
           <li>
             <img
@@ -177,8 +177,8 @@
               width="360"
               height="300"
             />
-            <h3 class="section3-title">Online Courses</h3>
-            <p class="section3-text">Marketing</p>
+            <h3 class="h3">Online Courses</h3>
+            <p class="text3">Marketing</p>
           </li>
         </ul>
       </section>
