--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <section>
         <ul class="section1">
           <li>
-            <h3 class="h2">Strategy</h3>
+            <h3 class="h3">Strategy</h3>
             <p class="text1">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -82,7 +82,7 @@
               width="264"
               height="260"
             />
-            <h3 class="section2-title">Mark Guerrero</h3>
+            <h3 class="h3">Mark Guerrero</h3>
             <p class="text2">Product Designer</p>
           </li>
           <li>
@@ -127,7 +127,7 @@
               width="360"
               height="300"
             />
-            <h3 class="section3-title">Banking App</h3>
+            <h3 class="h3">Banking App</h3>
             <p class="text3">App</p>
           </li>
           <li>
