--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header>
-      <a class="logo" href="./index.html"
+      <a href="./index.html" class="logo"
         ><span class="accent">WEB</span>STUDIOS</a
       >
       <nav>
@@ -186,7 +186,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html"
+      <a href="./index.html" class="logo"
         ><span class="accent">WEB</span>STUDIOS</a
       >
       <p>
