--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         </ul>
       </nav>
       <address class="adress">
-        <a href="tel:+11000111111">+11 (000)111-11-11</a>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+11000111111" class="contact">+11 (000)111-11-11</a>
+        <a href="mailto:info@devstudio.com" class="contact"
+          >info@devstudio.com</a
+        >
       </address>
     </header>
     <main>
